# OOP

./: .pre-commit-config.yaml  README.md  api.py  pyproject.toml  scoring.py  test.py
.github/workflows/: ci.yaml
