[tool.black]
line-length = 100
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 100
skip = [".venv"]

[flake8]
max-line-length = 100

[tool.poetry]
name = "otus-oop"
version = "0.1.0"
description = ""
authors = ["Ivan1586"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
